--- a/Pipfile
+++ b/Pipfile
@@ -34,6 +34,7 @@ traitlets = "==5.14.3"
 tzdata = "==2024.1"
 wcwidth = "==0.2.13"
 widgetsnbextension = "==4.0.13"
+yfinance = "*"
 
 [dev-packages]
 
